# C_Projects

./: Cargo.toml  README.md
.assets/: katex-header.html
.cargo/: config
.travis/: deploy_key.enc  requirements.txt
src/: lib.rs
src/neural_network/: activate_functions.rs  mod.rs
src/perceptron/: mod.rs  multi.rs  single.rs
src/setup/: mnist.rs  mod.rs
src/setup/dlfs/: chap3.rs  mod.rs
src/utils/: fetch_client.rs  mod.rs  natural_transform.rs
